Fix project background-image responsiveness on tablet-size screens

--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -7,7 +7,6 @@
     background-image: url('../../images/linkedin-photo-render.png');
     background-repeat:no-repeat;
     background-position:top right;
-    background: 
 }
 
 .projects-intro {
@@ -39,10 +38,12 @@
         display:flex;
         flex-direction:column;
         align-items:flex-start;
+        min-height:40vh;
     }
     .intro-text {
         width:50%;
     }
+
 }
 
 @media screen and (max-width:450px) {
@@ -51,6 +52,7 @@
         flex-direction:column;
         align-items:center;
         text-align:center;
+        min-height:50vh;
     }
 
     h1.intro-text {   
